--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -8,3 +8,12 @@ html,body,#app{
   font-size: 12px;
   margin-bottom: 15px;
 }
+.el-card{
+  box-shadow: 0,1px,1px,rgba(0, 0, 0, 0.15)!important;
+}
+.el-table{
+  margin-top: 15px;
+}
+.el-pagination{
+  margin-top: 15px;
+}
