--- a/src/assets/css/global.css
+++ b/src/assets/css/global.css
@@ -18,3 +18,10 @@ html,body,#app{
 .el-pagination{
   margin-top: 15px;
 }
+.el-steps{
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+.ql-editor{
+  min-height: 300px;
+}
